[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/mainMenu/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/mainMenuAssets/BAUHS93.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/mainMenuBG.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/myTongue.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/fire5.png" type="Texture" id=6]
[ext_resource path="res://Assets/SFX/bgm/Magic Forest.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/ARIALBD.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Teko-Light.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/SFX/click.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="Shader" id=4]
resource_local_to_scene = true
code = "/*Code created: 9/18/2022
By:Mohit Garg
Date Revised:Mohit Garg

//Description:Creates Fire Shader

*/
shader_type canvas_item;

uniform sampler2D noise;//noise gives fire dynamical structure


/*
@pre None
@post Ansimated Fire appears on the main menu
@param none
@return none
*/
//known bugs: currently fire is not anchored correctly in full screen
void fragment(){
	vec4 base=texture(TEXTURE,UV);//creates base
	vec4 n= texture(noise,vec2(UV.x,UV.y+TIME));//creates noise vector y+Time helps fire move vertically
	base.r += 0.4f - distance(vec2(0.5,UV.y),UV);//want to make center brighter so add small amount and subtract from center
	base.r = (base.r*0.3) +(n.r *0.4); //adding noise can experiment with ratios to get appropriate base.r
	COLOR=vec4(float(base.r>0.4),float(base.r>0.5),float(base.r>0.6),float(base.r>0.4));//color will change based on result of boolean expressiong give fire it's color
	
	//base.r is red channel
}
"

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 5 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 4 )
shader_param/noise = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 50.0
margin_bottom = 50.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -46.0
margin_bottom = -47.0
rect_scale = Vector2( 0.997, 0.996 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="menuButtons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -314.0
margin_right = 134.0
margin_bottom = -174.0
rect_scale = Vector2( 1.77124, 1.77124 )

[node name="Start" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_right = 118.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -644, -266 )
focus_neighbour_top = NodePath("../Quit")
text = "Start"

[node name="Options" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_top = 24.0
margin_right = 118.0
margin_bottom = 44.0
text = "Options"

[node name="Market" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_top = 48.0
margin_right = 118.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -644, -266 )
text = "Market"

[node name="Tests" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_top = 72.0
margin_right = 118.0
margin_bottom = 92.0
text = "Tests"

[node name="Credits" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_top = 96.0
margin_right = 118.0
margin_bottom = 116.0
text = "Credits"

[node name="Quit" type="Button" parent="menuButtons" groups=["my_buttons"]]
margin_top = 120.0
margin_right = 118.0
margin_bottom = 140.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[node name="createGameButton" type="Button" parent="." groups=["my_buttons"]]
margin_left = 1095.0
margin_top = 11.0
margin_right = 1269.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "Create match"

[node name="joinLobby" type="VBoxContainer" parent="."]
margin_left = 1095.0
margin_top = 77.0
margin_right = 1269.0
margin_bottom = 130.0

[node name="joinGame" type="Button" parent="joinLobby" groups=["my_buttons"]]
margin_right = 174.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 9 )
text = "Join Existing Game"

[node name="enterLobbyCode" type="LineEdit" parent="joinLobby"]
visible = false
margin_left = 178.0
margin_right = 236.0
margin_bottom = 53.0

[node name="showLobbyCode" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1077.0
margin_top = 613.0
margin_right = -864.0
margin_bottom = 779.0
rect_scale = Vector2( 0.889601, 0.796081 )

[node name="lobbyCode" type="Button" parent="showLobbyCode" groups=["my_buttons"]]
margin_right = 213.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -644, -266 )
custom_fonts/font = SubResource( 1 )
text = "Lobby Code"

[node name="code" type="Label" parent="showLobbyCode"]
margin_top = 54.0
margin_right = 213.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 10 )
text = "XXXX"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Fire5" type="Sprite" parent="CenterContainer"]
material = SubResource( 6 )
position = Vector2( 899, 404 )
scale = Vector2( 0.40332, 0.37793 )
texture = ExtResource( 6 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 24.0
bus = "SFX"

[node name="button_down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 4.522

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.072
bus = "Music"

[connection signal="pressed" from="menuButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="menuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="menuButtons/Market" to="." method="_on_Market_pressed"]
[connection signal="pressed" from="menuButtons/Tests" to="." method="_on_Tests_pressed"]
[connection signal="pressed" from="menuButtons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="menuButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="createGameButton" to="." method="_on_createGameButton_pressed"]
[connection signal="pressed" from="joinLobby/joinGame" to="." method="_on_joinGame_pressed"]
[connection signal="focus_entered" from="joinLobby/enterLobbyCode" to="." method="_on_enterLobbyCode_focus_entered"]
[connection signal="text_entered" from="joinLobby/enterLobbyCode" to="." method="_on_enterLobbyCode_text_entered"]
